--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
 body{
-    background-color:#FFF8E1;
+    background-color:#E8E8E8
   }
 #surveyBox{
-    display: flex;
-    flex-direction: column;
-   border: 5px solid #ffff;
-    max-width: 400px;
-    margin: 50px auto;
-    padding: 20px;
+    border: 5px solid #ffff;
+    max-width: 600px;
+    margin: 40px auto;
+    padding: 30px;
     border-radius: 5px;
     background-color: #DAC4FF;
 }
 fieldset{
     border-color:#ffff;
+}
+#submit{
+    background-color: #FFEAD4;
 }
