--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body{
   }
 #titleBox{
     border: 5px solid #FF6600 ;
+    border-radius: 10px;
     background-image:linear-gradient(#666666,#000000 );
     margin-left: auto;
     margin-right: auto;
@@ -13,9 +14,25 @@ body{
     margin-top: 70px;
 
 }
+#title{
+    text-align: center;
+    color: #fd934d ;
+    text-shadow: 3px 2px 3px #3d5a66 ;
+}
+#description{
+    text-align: center;
+    color: #FF6600 ;
+    text-shadow: 3px 2px 4px #3d5a66 ;
+    font-size: 17px;
+}
+label{
+    color: #FF6600 ;
+    text-shadow: 3px 2px 4px #3d5a66 ;
+}
 #surveyBox{
     border: 5px solid #FF6600 ;
-    max-width: 600px;
+    border-radius: 50px;
+    max-width: 650px;
     margin: 40px auto;
     padding: 30px;
     border-radius: 5px;
@@ -32,19 +49,10 @@ input {
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
-    width: 200px;
-}
-#title{
     text-align: center;
-    color: #fd934d ;
-    text-shadow: 3px 2px 3px #660033 ;
+    
 }
-#description{
-    text-align: center;
-    color: #FF6600 ;
-    text-shadow: 3px 2px 4px #660033 ;
-    font-size: 22px;
-}
+
 select{
     width: 575px;
     height: 25px;
@@ -52,42 +60,58 @@ select{
     margin-bottom: 20px;
     padding-left: 10px;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    background-color:  #fd934d;
+    background-color: #d1a16e ;
 }
 #number{
-    background-color:#fd934d;
+    background-color:#d1a16e;
     color: #000000;
     border: 1px solid #fd934d;
     margin-bottom: 10px;
+    margin-top: 5px;
     width: 550px;
 
 }
 #email{
-    background-color:#fd934d;
+    background-color:#d1a16e;
     border: 1px solid #fd934d;
     margin-bottom: 20px;
     width: 550px;
+    margin-top: 5px;
 }
 #name{
-    background-color: #fd934d;
+    background-color: #d1a16e;
     border: 1px solid #fd934d;
     margin-bottom: 20px;
-    width: 500px;
+    margin-top: 5px;
+    width: 550px;
     
 }
 #textArea{
-    background-color: #fd934d;
+    background-color: #d1a16e;
     border: 1px solid #fd934d;
-    width: 500px;
-    
+    width: 575px;
+    margin-top: 5px;
 }
 legend{
-    background-image: linear-gradient(to right, #ff0000, #00ff00); /* Define the gradient direction and colors */
-    -webkit-background-clip: text; /* Clip the gradient to the text */
-    -webkit-text-fill-color: transparent;
+    color: #FF6600 ;
+    text-shadow: 3px 2px 4px #3d5a66 ;
+}
+fieldset{
+    margin-bottom: 15px;
+    
 }
 #inputMessage{
-    background-image: linear-gradient(to right, #ff0000, #00ff00); /* Define the gradient direction and colors */
-    -webkit-background-clip: text; /* Clip the gradient to the text */
-    -webkit-text-fill-color: transparent;
+    color: #FF6600 ;
+    text-shadow: 3px 2px 4px #3d5a66 ;
+}
+#submit{
+    width: 575px;
+    margin-top: 20px;
+    background-color: #6e8b97;
+    border: 1px solid #3d5a66;
+    color: #000 ;
+}
+span{
+    color: #FF6600 ;
+    text-shadow: 3px 2px 4px #3d5a66 ;
 }
